--- a/test/fixtures/chapters.yml
+++ b/test/fixtures/chapters.yml
@@ -8,6 +8,7 @@
 #  book_id    :integer
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
+#  position   :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
