--- a/test/fixtures/sections.yml
+++ b/test/fixtures/sections.yml
@@ -1,3 +1,16 @@
+# == Schema Information
+#
+# Table name: sections
+#
+#  id         :integer          not null, primary key
+#  title      :string
+#  notes      :text
+#  content    :text
+#  chapter_id :integer
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
